--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -5,4 +5,7 @@
  <span>
   <%= link_to list.title, list_path(list.id) %>
  </span>
+ 
+ <p>画像</p>
+ <%= image_tag list.image, size: "200×200" %>
 <% end %>
