[Finish]バリテーション作成

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -7,5 +7,9 @@
  </span>
  
  <p>画像</p>
- <%= image_tag list.image, size: "200×200" %>
+ <% if list.image.attached? %>
+  <%= image_tag list.image, size: "200×200" %>
+ <% else %>
+  <%= image_tag 'no_image', size: "200×200" %>
+ <% end %>
 <% end %>
